# BS-Thesis

FaceAnimator/: AUTHORS  AUV_selector.glade  AUV_selector.gladep  CC69F.kdevelop  CC69F.kdevelop.pcs  ChangeLog  Doxyfile  FaceParamAnimator.cbp  FaceParamAnimator.depend  FaceParamAnimator.layout  Makefile.am  Makefile.am_new  README  TreeGrowthSimulator.depend  TreeGrowthSimulator.glade  TreeGrowthSimulator.gladep  TreeGrowthSimulator.layout  acconfig.h  acconfig.h_new  autogen.sh  autogen.sh_new  cc69f.kdevelop.filelist  compilar  config_match.txt  config_match_franco.txt  configure.in  configure.in_new  ejemplo_candide.cd3  ejemplo_candide_sonrisa.cd3  juan.conf  movs_candide.txt  treegrowthsimulator  ventanainicio.glade  ventanainicio.gladep  workspc2.workspace  ws.workspace
FaceAnimator/doc/: .~lock.Informe_final_e_gurroz.doc#  Diagrama_aplicacion.xmi  Informe_final_e_gurroz.doc  cambios_memoria  changelog.txt  funcionalidades.ods  instalacion.txt  memoria.tex  refs.bib  uchile.cls
FaceAnimator/mallas/: Franco.wrl  Juan.wrl  candide_respaldo.wfm
FaceAnimator/src/: Doxyfile  GLMainScene.cc  GLMainScene.hh  GUIDialogAbrirMatlab.cc  GUIDialogAbrirMatlab.cc_new  GUIDialogAbrirMatlab.hh  GUIDialogAbrirMatlab.hh_new  GUIDialogAbrirMatlab_glade.cc  GUIDialogAbrirMatlab_glade.hh  GUIDialogAlgCentro.cc  GUIDialogAlgCentro.cc_new  GUIDialogAlgCentro.hh  GUIDialogAlgCentro.hh_new  GUIDialogAlgCentro_glade.cc  GUIDialogAlgCentro_glade.hh  GUIDialogCambios.cc  GUIDialogCambios.cc_new  GUIDialogCambios.hh  GUIDialogCambios.hh_new  GUIDialogCambios_glade.cc  GUIDialogCambios_glade.hh  GUIDialogDesrefinar.cc  GUIDialogDesrefinar.cc_new  GUIDialogDesrefinar.hh  GUIDialogDesrefinar.hh_new  GUIDialogDesrefinar_glade.cc  GUIDialogDesrefinar_glade.hh  GUIDialogDistribuirHormona.cc  GUIDialogDistribuirHormona.hh  (+210 more)
(+35 files in other folders)
