# generated 2007/4/6 15:47:41 CLT by chupacabrasx@amd64-3000.(none)
# using glademm V2.6.0
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = treegrowthsimulator

treegrowthsimulator_SOURCES = \
	treegrowthsimulator.cc\
	GUIVentanaPrincipal_glade.cc \
	GUIVentanaPrincipal.cc \
	GUIDialogAbrirMatlab_glade.cc \
	GUIDialogAbrirMatlab.cc \
	GUIDialogNuevaMalla_glade.cc \
	GUIDialogNuevaMalla.cc \
	GUIDialogCambios_glade.cc \
	GUIDialogCambios.cc \
	GUIDialogRefinar_glade.cc \
	GUIDialogRefinar.cc \
	GUIDialogDesrefinar_glade.cc \
	GUIDialogDesrefinar.cc \
	GUIDialogInformacion_glade.cc \
	GUIDialogInformacion.cc 

noinst_HEADERS = \
	GUIVentanaPrincipal_glade.hh \
	GUIVentanaPrincipal.hh \
	GUIDialogAbrirMatlab_glade.hh \
	GUIDialogAbrirMatlab.hh \
	GUIDialogNuevaMalla_glade.hh \
	GUIDialogNuevaMalla.hh \
	GUIDialogCambios_glade.hh \
	GUIDialogCambios.hh \
	GUIDialogRefinar_glade.hh \
	GUIDialogRefinar.hh \
	GUIDialogDesrefinar_glade.hh \
	GUIDialogDesrefinar.hh \
	GUIDialogInformacion_glade.hh \
	GUIDialogInformacion.hh 

CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ 

treegrowthsimulator_LDADD = @LIBS@ @GTKMM_LIBS@ 
